deploy/api-gateway.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: testing
spec:
  ingressClassName: nginx-internal
  rules:
    - host: api.testing.k8s.bumastemra.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080
  tls:
    - hosts:
        - api.testing.k8s.bumastemra.nl
      secretName: testing-tls-secret
